@@ -11,7 +11,6 @@ import com.fasterxml.jackson.databind.JsonNode;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Charsets;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import com.google.common.hash.HashFunction;
 import com.google.common.hash.Hashing;
 import io.airbyte.api.model.generated.CatalogDiff;
@@ -57,12 +56,14 @@ import io.airbyte.commons.server.handlers.helpers.NotificationHelper;
 import io.airbyte.commons.server.scheduler.EventRunner;
 import io.airbyte.commons.server.scheduler.SynchronousResponse;
 import io.airbyte.commons.server.scheduler.SynchronousSchedulerClient;
+import io.airbyte.commons.server.support.CurrentUserService;
 import io.airbyte.commons.temporal.ErrorCode;
 import io.airbyte.commons.temporal.TemporalClient.ManualOperationResult;
 import io.airbyte.commons.version.Version;
 import io.airbyte.config.ActorCatalog;
 import io.airbyte.config.ActorDefinitionVersion;
 import io.airbyte.config.DestinationConnection;
+import io.airbyte.config.JobConfig;
 import io.airbyte.config.JobTypeResourceLimit.JobType;
 import io.airbyte.config.NotificationSettings;
 import io.airbyte.config.ResourceRequirements;
@@ -73,7 +74,6 @@ import io.airbyte.config.StandardCheckConnectionOutput;
 import io.airbyte.config.StandardDestinationDefinition;
 import io.airbyte.config.StandardSourceDefinition;
 import io.airbyte.config.StandardSync;
-import io.airbyte.config.StandardSyncOperation;
 import io.airbyte.config.StandardWorkspace;
 import io.airbyte.config.WorkloadPriority;
 import io.airbyte.config.helpers.ResourceRequirementsUtils;
@@ -84,11 +84,16 @@ import io.airbyte.config.persistence.StreamResetPersistence;
 import io.airbyte.config.persistence.domain.StreamRefresh;
 import io.airbyte.config.secrets.SecretsRepositoryWriter;
 import io.airbyte.config.secrets.persistence.RuntimeSecretPersistence;
+import io.airbyte.data.services.ConnectionTimelineEventService;
 import io.airbyte.data.services.SecretPersistenceConfigService;
 import io.airbyte.data.services.WorkspaceService;
+import io.airbyte.data.services.shared.SyncCancelledEvent;
+import io.airbyte.data.services.shared.SyncStartedEvent;
+import io.airbyte.featureflag.DiscoverPostprocessInTemporal;
 import io.airbyte.featureflag.FeatureFlagClient;
 import io.airbyte.featureflag.Organization;
 import io.airbyte.featureflag.UseRuntimeSecretPersistence;
+import io.airbyte.featureflag.Workspace;
 import io.airbyte.metrics.lib.MetricAttribute;
 import io.airbyte.metrics.lib.MetricClientFactory;
 import io.airbyte.metrics.lib.MetricTags;
@@ -113,7 +118,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -153,6 +157,8 @@ public class SchedulerHandler {
   private final ConnectorDefinitionSpecificationHandler connectorDefinitionSpecificationHandler;
   private final WorkspaceService workspaceService;
   private final SecretPersistenceConfigService secretPersistenceConfigService;
+  private final ConnectionTimelineEventService connectionEventService;
+  private final CurrentUserService currentUserService;
   private final StreamRefreshesHandler streamRefreshesHandler;
   private final NotificationHelper notificationHelper;
 
@@ -179,6 +185,8 @@ public class SchedulerHandler {
                           final ConnectorDefinitionSpecificationHandler connectorDefinitionSpecificationHandler,
                           final WorkspaceService workspaceService,
                           final SecretPersistenceConfigService secretPersistenceConfigService,
+                          final ConnectionTimelineEventService connectionEventService,
+                          final CurrentUserService currentUserService,
                           final StreamRefreshesHandler streamRefreshesHandler,
                           final NotificationHelper notificationHelper) {
     this.configRepository = configRepository;
@@ -201,6 +209,8 @@ public class SchedulerHandler {
     this.connectorDefinitionSpecificationHandler = connectorDefinitionSpecificationHandler;
     this.workspaceService = workspaceService;
     this.secretPersistenceConfigService = secretPersistenceConfigService;
+    this.connectionEventService = connectionEventService;
+    this.currentUserService = currentUserService;
     this.jobCreationAndStatusUpdateHelper = new JobCreationAndStatusUpdateHelper(
         jobPersistence,
         configRepository,
@@ -340,10 +350,24 @@ public class SchedulerHandler {
     return checkDestinationConnectionFromDestinationCreate(destinationCoreConfig);
   }
 
-  public SourceDiscoverSchemaRead discoverSchemaForSourceFromSourceId(final SourceDiscoverSchemaRequestBody discoverSchemaRequestBody)
+  public SourceDiscoverSchemaRead discoverSchemaForSourceFromSourceId(final SourceDiscoverSchemaRequestBody req)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final SourceConnection source = configRepository.getSourceConnection(req.getSourceId());
+
+    if (featureFlagClient.boolVariation(DiscoverPostprocessInTemporal.INSTANCE, new Workspace(source.getWorkspaceId()))) {
+      return discover(req, source);
+    } else {
+      return discoverAndGloballyDisable(req, source);
+    }
+  }
+
+  /**
+   * Runs discover schema and performs conditional disabling of all connections.
+   */
+  public SourceDiscoverSchemaRead discoverAndGloballyDisable(final SourceDiscoverSchemaRequestBody discoverSchemaRequestBody,
+                                                             final SourceConnection source)
       throws ConfigNotFoundException, IOException, JsonValidationException {
     final UUID sourceId = discoverSchemaRequestBody.getSourceId();
-    final SourceConnection source = configRepository.getSourceConnection(sourceId);
     final StandardSourceDefinition sourceDef = configRepository.getStandardSourceDefinition(source.getSourceDefinitionId());
     final ActorDefinitionVersion sourceVersion = actorDefinitionVersionHelper.getSourceVersion(sourceDef, source.getWorkspaceId(), sourceId);
     final boolean isCustomConnector = sourceDef.getCustom();
@@ -390,6 +414,81 @@ public class SchedulerHandler {
         .catalog(CatalogConverter.toApi(airbyteCatalog, sourceVersion))
         .jobInfo(emptyJob)
         .catalogId(currentCatalog.get().getId());
+  }
+
+  /**
+   * Runs discover schema and does not disable other connections.
+   */
+  public SourceDiscoverSchemaRead discover(final SourceDiscoverSchemaRequestBody req, final SourceConnection source)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final UUID sourceId = req.getSourceId();
+    final StandardSourceDefinition sourceDef = configRepository.getStandardSourceDefinition(source.getSourceDefinitionId());
+    final ActorDefinitionVersion sourceVersion = actorDefinitionVersionHelper.getSourceVersion(sourceDef, source.getWorkspaceId(), sourceId);
+
+    final boolean skipCacheCheck = req.getDisableCache() != null && req.getDisableCache();
+    // Skip cache check and run discover.
+    if (skipCacheCheck) {
+      return runDiscoverJobDiffAndConditionallyDisable(source, sourceDef, sourceVersion, req.getPriority(), req.getConnectionId());
+    }
+
+    // Check cache.
+    final String configHash = HASH_FUNCTION.hashBytes(Jsons.serialize(source.getConfiguration()).getBytes(
+        Charsets.UTF_8)).toString();
+    final String connectorVersion = sourceVersion.getDockerImageTag();
+
+    final Optional<ActorCatalog> existingCatalog =
+        configRepository.getActorCatalog(req.getSourceId(), connectorVersion, configHash);
+
+    // No catalog exists, run discover.
+    if (existingCatalog.isEmpty()) {
+      return runDiscoverJobDiffAndConditionallyDisable(source, sourceDef, sourceVersion, req.getPriority(), req.getConnectionId());
+    }
+
+    // We have a catalog cached, no need to run discover. Return cached catalog.
+    final AirbyteCatalog airbyteCatalog = Jsons.object(existingCatalog.get().getCatalog(), AirbyteCatalog.class);
+    final SynchronousJobRead emptyJob = new SynchronousJobRead()
+        .configId("NoConfiguration")
+        .configType(JobConfigType.DISCOVER_SCHEMA)
+        .id(UUID.randomUUID())
+        .createdAt(0L)
+        .endedAt(0L)
+        .logs(new LogRead().logLines(new ArrayList<>()))
+        .succeeded(true);
+    return new SourceDiscoverSchemaRead()
+        .catalog(CatalogConverter.toApi(airbyteCatalog, sourceVersion))
+        .jobInfo(emptyJob)
+        .catalogId(existingCatalog.get().getId());
+  }
+
+  private SourceDiscoverSchemaRead runDiscoverJobDiffAndConditionallyDisable(final SourceConnection source,
+                                                                             final StandardSourceDefinition sourceDef,
+                                                                             final ActorDefinitionVersion sourceVersion,
+                                                                             final io.airbyte.api.model.generated.WorkloadPriority priority,
+                                                                             final UUID connectionId)
+      throws ConfigNotFoundException, IOException, JsonValidationException {
+    final boolean isCustomConnector = sourceDef.getCustom();
+    // ResourceRequirements are read from actor definition and can be null; but if it's not null it will
+    // have higher priority and overwrite
+    // the default settings in WorkerConfig.
+    final ResourceRequirements resourceRequirements =
+        getResourceRequirementsForJobType(sourceDef.getResourceRequirements(), JobType.DISCOVER_SCHEMA)
+            .orElse(null);
+
+    final SynchronousResponse<UUID> persistedCatalogId =
+        synchronousSchedulerClient.createDiscoverSchemaJob(
+            source,
+            sourceVersion,
+            isCustomConnector,
+            resourceRequirements,
+            priority == null ? WorkloadPriority.HIGH : WorkloadPriority.fromValue(priority.toString()));
+
+    final var schemaRead = retrieveDiscoveredSchema(persistedCatalogId, sourceVersion);
+    // no connection to diff
+    if (connectionId == null) {
+      return schemaRead;
+    }
+
+    return connectionsHandler.diffCatalogAndConditionallyDisable(connectionId, schemaRead.getCatalogId());
   }
 
   public void applySchemaChangeForSource(final SourceAutoPropagateChange sourceAutoPropagateChange)
@@ -523,7 +622,7 @@ public class SchedulerHandler {
   }
 
   public JobInfoRead resetConnectionStream(final ConnectionStreamRequestBody connectionStreamRequestBody)
-      throws IOException {
+      throws IOException, ConfigNotFoundException {
     return submitResetConnectionStreamsToWorker(connectionStreamRequestBody.getConnectionId(), connectionStreamRequestBody.getStreams());
   }
 
@@ -552,18 +651,6 @@ public class SchedulerHandler {
           actorDefinitionVersionHelper.getDestinationVersion(destinationDef, destination.getWorkspaceId(), destination.getDestinationId());
       final String destinationImageName = destinationVersion.getDockerRepository() + ":" + destinationVersion.getDockerImageTag();
 
-      final List<StandardSyncOperation> standardSyncOperations = Lists.newArrayList();
-      for (final var operationId : standardSync.getOperationIds()) {
-        final StandardSyncOperation standardSyncOperation = configRepository.getStandardSyncOperation(operationId);
-        // NOTE: we must run normalization operations during resets, because we rely on them to clear the
-        // normalized tables. However, we don't want to run other operations (dbt, webhook) because those
-        // are meant to transform the data after the sync but there's no data to transform. Webhook
-        // operations particularly will fail because we don't populate some required config during resets.
-        if (StandardSyncOperation.OperatorType.NORMALIZATION.equals(standardSyncOperation.getOperatorType())) {
-          standardSyncOperations.add(standardSyncOperation);
-        }
-      }
-
       final Optional<Long> jobIdOptional =
           jobCreator.createResetConnectionJob(
               destination,
@@ -573,7 +660,7 @@ public class SchedulerHandler {
               destinationImageName,
               new Version(destinationVersion.getProtocolVersion()),
               destinationDef.getCustom(),
-              standardSyncOperations,
+              List.of(),
               streamsToReset,
               destination.getWorkspaceId());
 
@@ -695,6 +782,15 @@ public class SchedulerHandler {
     return checkConnectionRead;
   }
 
+  private UUID getCurrentUserIdIfExist() {
+    try {
+      return currentUserService.getCurrentUser().getUserId();
+    } catch (final Exception e) {
+      log.info("Unable to get current user associated with the request. " + e);
+      return null;
+    }
+  }
+
   private JobInfoRead submitCancellationToWorker(final Long jobId) throws IOException {
     final Job job = jobPersistence.getJob(jobId);
 
@@ -702,7 +798,14 @@ public class SchedulerHandler {
     if (cancellationResult.getFailingReason().isPresent()) {
       throw new IllegalStateException(cancellationResult.getFailingReason().get());
     }
-
+    final JobInfoRead jobInfo = readJobFromResult(cancellationResult);
+    if (job.getConfigType() != null && job.getConfigType().equals(JobConfig.ConfigType.SYNC)) {
+      // Store connection timeline event (cancel a sync).
+      final SyncCancelledEvent event = new SyncCancelledEvent(
+          jobInfo.getJob().getId(),
+          jobInfo.getJob().getCreatedAt());
+      connectionEventService.writeEvent(UUID.fromString(job.getScope()), event, getCurrentUserIdIfExist());
+    }
     // query same job ID again to get updated job info after cancellation
     return jobConverter.getJobInfoRead(jobPersistence.getJob(jobId));
   }
@@ -715,8 +818,15 @@ public class SchedulerHandler {
       throw new IllegalStateException("Can only sync an active connection");
     }
     final ManualOperationResult manualSyncResult = eventRunner.startNewManualSync(connectionId);
-
-    return readJobFromResult(manualSyncResult);
+    final JobInfoRead jobInfo = readJobFromResult(manualSyncResult);
+    if (jobInfo != null && jobInfo.getJob() != null && jobInfo.getJob().getConfigType().equals(JobConfigType.SYNC)) {
+      // Store connection timeline event (start a manual sync).
+      final SyncStartedEvent event = new SyncStartedEvent(
+          jobInfo.getJob().getId(),
+          jobInfo.getJob().getCreatedAt());
+      connectionEventService.writeEvent(connectionId, event, getCurrentUserIdIfExist());
+    }
+    return jobInfo;
   }
 
   private JobInfoRead submitResetConnectionToWorker(final UUID connectionId) throws IOException, IllegalStateException, ConfigNotFoundException {
@@ -734,10 +844,11 @@ public class SchedulerHandler {
   }
 
   private JobInfoRead submitResetConnectionStreamsToWorker(final UUID connectionId, final List<ConnectionStream> streams)
-      throws IOException, IllegalStateException {
-    return submitResetConnectionToWorker(connectionId,
-        streams.stream().map(s -> new StreamDescriptor().withName(s.getStreamName()).withNamespace(s.getStreamNamespace())).collect(
-            Collectors.toList()));
+      throws IOException, IllegalStateException, ConfigNotFoundException {
+    final List<StreamDescriptor> actualStreamsToReset = streams.isEmpty()
+        ? configRepository.getAllStreamsForConnection(connectionId)
+        : streams.stream().map(s -> new StreamDescriptor().withName(s.getStreamName()).withNamespace(s.getStreamNamespace())).toList();
+    return submitResetConnectionToWorker(connectionId, actualStreamsToReset);
   }
 
   private JobInfoRead readJobFromResult(final ManualOperationResult manualOperationResult) throws IOException, IllegalStateException {
